Changed the fundamental structure for tasks so that its hierarchical, similar to how estimates are now setup. This eliminates all of the bugs for calculating the task numbers. Added in a new type of estimate, the user-interface estimate, which is prepared by cropping sections of a mockup photograph. Added in a new 'Visual  Reference' section which contains the user interface mockups.

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,7 @@
   padding-top: 10px;
   align-items: flex-start;
 }
+
+.App .modal-lg {
+  width: 70%;
+}
